--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <!--<link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>-->
     <link rel= "stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Black|Palanquin+Dark|Righteous" />
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
